--- a/src/index.html
+++ b/src/index.html
@@ -364,23 +364,23 @@
 
                       <ul class="itc-select2__options">
                         <li class="itc-select2__option" data-select="checkbox">
-                          <input type="checkbox" class="itc-select2__input" value="Няня" />
-                          Няня
+                          <input class="itc-select2__input" id="babysitter" type="checkbox" value="Няня" />
+                          <label for="babysitter">Няня</label>
                         </li>
 
                         <li class="itc-select2__option" data-select="checkbox">
-                          <input type="checkbox" class="itc-select2__input" value="Персональное меню" />
-                          Персональное меню
+                          <input class="itc-select2__input" id="menu" type="checkbox" value="Персональное меню" />
+                          <label for="menu">Персональное меню</label>
                         </li>
 
                         <li class="itc-select2__option" data-select="checkbox">
-                          <input type="checkbox" class="itc-select2__input" value="Персональный гид" />
-                          Персональный гид
+                          <input class="itc-select2__input" id="guide" type="checkbox" value="Персональный гид" />
+                          <label for="guide">Персональный гид</label>
                         </li>
 
                         <li class="itc-select2__option" data-select="checkbox">
-                          <input type="checkbox" class="itc-select2__input" value="Улучшенная палатка" />
-                          Улучшенная палатка
+                          <input class="itc-select2__input" id="tent" type="checkbox" value="Улучшенная палатка" />
+                          <label for="tent">Улучшенная палатка</label>
                         </li>
                       </ul>
 
@@ -815,23 +815,23 @@
 
                     <fieldset class="itc-select6__options">
                       <label class="itc-select6__option" data-select="checkbox">
-                        <input type="checkbox" class="itc-select6__input" value="Няня" />
-                        Няня
+                        <input class="itc-select6__input" id="form-babysitter" type="checkbox" value="Няня" />
+                        <label for="form-babysitter">Няня</label>
                       </label>
 
                       <label class="itc-select6__option" data-select="checkbox">
-                        <input type="checkbox" class="itc-select6__input" value="Персональное меню" />
-                        Персональное меню
+                        <input class="itc-select6__input" id="form-menu" type="checkbox" value="Персональное меню" />
+                        <label for="form-menu">Персональное меню</label>
                       </label>
 
                       <label class="itc-select6__option" data-select="checkbox">
-                        <input type="checkbox" class="itc-select6__input" value="Персональный гид" />
-                        Персональный гид
+                        <input class="itc-select6__input" id="form-guide" type="checkbox" value="Персональный гид" />
+                        <label for="form-guide">Персональный гид</label>
                       </label>
 
                       <label class="itc-select6__option" data-select="checkbox">
-                        <input type="checkbox" class="itc-select6__input" value="Улучшенная палатка" />
-                        Улучшенная палатка
+                        <input class="itc-select6__input" id="form-tent" type="checkbox" value="Улучшенная палатка" />
+                        <label for="form-tent">Улучшенная палатка</label>
                       </label>
                     </fieldset>
 
